# ZeroBot

./: .gitignore  CMakeLists.txt
addons/: searchImage.py
header/: BotInstance.hh  Event.hh  Message.hh  MessageExtra.hh  Object.hh  Plugin.hh  Setting.hh  Signal.hh  Transmitter.hh
header/plugin/: Echo.hh  ImageSearch.hh  Jrrp.hh  Music.hh
include/hv/: hconfig.h
lib/: libssl-1_1.lib
main/: main.cc  test.cc
src/: BotInstance.cc  Event.cc  Message.cc  MessageExtra.cc  Object.cc  Plugin.cc  Setting.cc  Signal.cc  Transmitter.cc
src/plugin/: Echo.cc  ImgSearch.cc  Jrrp.cc  Music.cc
